--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "tailwindcss": "^0.6.5",
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
     }
 }
