refactor front-end

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,150 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/0.7f5c8e2f075b8830c1f7.hot-update.js": "/0.7f5c8e2f075b8830c1f7.hot-update.js",
-    "/0.fbac2a432a985610d1c7.hot-update.js": "/0.fbac2a432a985610d1c7.hot-update.js",
-    "/0.8cd9991aa0ebf4b4bdde.hot-update.js": "/0.8cd9991aa0ebf4b4bdde.hot-update.js",
-    "/0.36a7b3bbfc7e9d7e4757.hot-update.js": "/0.36a7b3bbfc7e9d7e4757.hot-update.js",
-    "/0.3dbf1b690419eb6646bc.hot-update.js": "/0.3dbf1b690419eb6646bc.hot-update.js",
-    "/0.944b5d813f38a3b574ac.hot-update.js": "/0.944b5d813f38a3b574ac.hot-update.js",
-    "/0.16a192bb6af2c1207695.hot-update.js": "/0.16a192bb6af2c1207695.hot-update.js",
-    "/0.c5bc7209561f51ae91bf.hot-update.js": "/0.c5bc7209561f51ae91bf.hot-update.js",
-    "/0.558e6f54437c13123a2f.hot-update.js": "/0.558e6f54437c13123a2f.hot-update.js",
-    "/0.6d38ece21ac6fc68fa62.hot-update.js": "/0.6d38ece21ac6fc68fa62.hot-update.js",
-    "/0.a9dacdc7cc02d7bc735f.hot-update.js": "/0.a9dacdc7cc02d7bc735f.hot-update.js",
-    "/0.2b019eccaadb0c21af7d.hot-update.js": "/0.2b019eccaadb0c21af7d.hot-update.js",
-    "/0.b6f98ab0434965442029.hot-update.js": "/0.b6f98ab0434965442029.hot-update.js",
-    "/0.b54dcb5df9778d17fa7e.hot-update.js": "/0.b54dcb5df9778d17fa7e.hot-update.js",
-    "/0.2fe3ad5fcc4b5504dce7.hot-update.js": "/0.2fe3ad5fcc4b5504dce7.hot-update.js",
-    "/0.91aeb7e91504d875d71d.hot-update.js": "/0.91aeb7e91504d875d71d.hot-update.js",
-    "/0.bbb46733a42a013377db.hot-update.js": "/0.bbb46733a42a013377db.hot-update.js",
-    "/0.4fe7dcce18a2f470d9ed.hot-update.js": "/0.4fe7dcce18a2f470d9ed.hot-update.js",
-    "/0.92770befc942656224d5.hot-update.js": "/0.92770befc942656224d5.hot-update.js",
-    "/0.e64de7d04e6d9b540b45.hot-update.js": "/0.e64de7d04e6d9b540b45.hot-update.js",
-    "/0.80e1b27380b076d54e6f.hot-update.js": "/0.80e1b27380b076d54e6f.hot-update.js",
-    "/0.2c351e0294f3181f00a0.hot-update.js": "/0.2c351e0294f3181f00a0.hot-update.js",
-    "/0.c15f90602c1633869c2b.hot-update.js": "/0.c15f90602c1633869c2b.hot-update.js",
-    "/0.1ce9b1041bf0542e986e.hot-update.js": "/0.1ce9b1041bf0542e986e.hot-update.js",
-    "/0.90df99638aaa0f79a11b.hot-update.js": "/0.90df99638aaa0f79a11b.hot-update.js",
-    "/0.5a6d4e8168baa05e7229.hot-update.js": "/0.5a6d4e8168baa05e7229.hot-update.js",
-    "/0.6b222b443b4117eb94be.hot-update.js": "/0.6b222b443b4117eb94be.hot-update.js",
-    "/0.bf104a4674ddea3cef9c.hot-update.js": "/0.bf104a4674ddea3cef9c.hot-update.js",
-    "/0.d7c1783695d39fbe72d9.hot-update.js": "/0.d7c1783695d39fbe72d9.hot-update.js",
-    "/0.6cb49e1058eab5814324.hot-update.js": "/0.6cb49e1058eab5814324.hot-update.js",
-    "/0.b5aee8645f352d684568.hot-update.js": "/0.b5aee8645f352d684568.hot-update.js",
-    "/0.248c5a4995eb3db35edf.hot-update.js": "/0.248c5a4995eb3db35edf.hot-update.js",
-    "/0.66b6c58b5c1724b23871.hot-update.js": "/0.66b6c58b5c1724b23871.hot-update.js",
-    "/0.188d8bc3c263c42094f6.hot-update.js": "/0.188d8bc3c263c42094f6.hot-update.js",
-    "/0.982eaa4c15be34f7319e.hot-update.js": "/0.982eaa4c15be34f7319e.hot-update.js",
-    "/0.439a95f476331359844f.hot-update.js": "/0.439a95f476331359844f.hot-update.js",
-    "/0.a2e94a4fe3d2fea02be8.hot-update.js": "/0.a2e94a4fe3d2fea02be8.hot-update.js",
-    "/0.6ef48f651d7069dd4786.hot-update.js": "/0.6ef48f651d7069dd4786.hot-update.js",
-    "/0.0b0d2da86b8803a813f3.hot-update.js": "/0.0b0d2da86b8803a813f3.hot-update.js",
-    "/0.0e6a719e662b10fcd041.hot-update.js": "/0.0e6a719e662b10fcd041.hot-update.js",
-    "/0.21b0adb0a841074b9d1f.hot-update.js": "/0.21b0adb0a841074b9d1f.hot-update.js",
-    "/0.2477fdda0d115a0fcce0.hot-update.js": "/0.2477fdda0d115a0fcce0.hot-update.js",
-    "/0.9690f1d8d90527a6f4b3.hot-update.js": "/0.9690f1d8d90527a6f4b3.hot-update.js",
-    "/0.91ed6da89109ee9fdb85.hot-update.js": "/0.91ed6da89109ee9fdb85.hot-update.js",
-    "/0.85b3a5e34ad95292c272.hot-update.js": "/0.85b3a5e34ad95292c272.hot-update.js",
-    "/0.c8f849d09a6c16d7a2a0.hot-update.js": "/0.c8f849d09a6c16d7a2a0.hot-update.js",
-    "/0.35518a7e4d2d7de44238.hot-update.js": "/0.35518a7e4d2d7de44238.hot-update.js",
-    "/0.ab3d8058bc52cc5a12d0.hot-update.js": "/0.ab3d8058bc52cc5a12d0.hot-update.js",
-    "/0.a3987d56809cf98815a0.hot-update.js": "/0.a3987d56809cf98815a0.hot-update.js",
-    "/0.f51e47b4c8fc330a46d1.hot-update.js": "/0.f51e47b4c8fc330a46d1.hot-update.js",
-    "/0.eaac48dabf8ecf9529cf.hot-update.js": "/0.eaac48dabf8ecf9529cf.hot-update.js",
-    "/0.9295e0210b684a876809.hot-update.js": "/0.9295e0210b684a876809.hot-update.js",
-    "/0.c43ba55b554a956ecb4b.hot-update.js": "/0.c43ba55b554a956ecb4b.hot-update.js",
-    "/0.8e3ff2acec8c603fb38c.hot-update.js": "/0.8e3ff2acec8c603fb38c.hot-update.js",
-    "/0.a66e6ac3a31a3eb2cbfe.hot-update.js": "/0.a66e6ac3a31a3eb2cbfe.hot-update.js",
-    "/0.733b2cf3344951b15e54.hot-update.js": "/0.733b2cf3344951b15e54.hot-update.js",
-    "/0.ff82f8b1f94e56333890.hot-update.js": "/0.ff82f8b1f94e56333890.hot-update.js",
-    "/0.e4c2a710f90fc1da3eda.hot-update.js": "/0.e4c2a710f90fc1da3eda.hot-update.js",
-    "/0.d1b696bf81d42c18b893.hot-update.js": "/0.d1b696bf81d42c18b893.hot-update.js",
-    "/0.4fba12d5cffd5aedd359.hot-update.js": "/0.4fba12d5cffd5aedd359.hot-update.js",
-    "/0.946123b1feceabe083ee.hot-update.js": "/0.946123b1feceabe083ee.hot-update.js",
-    "/0.9e37b525931da6212e8f.hot-update.js": "/0.9e37b525931da6212e8f.hot-update.js",
-    "/0.93b767708926facc4b49.hot-update.js": "/0.93b767708926facc4b49.hot-update.js",
-    "/0.c854b94bbf10c374950e.hot-update.js": "/0.c854b94bbf10c374950e.hot-update.js",
-    "/0.e2191394795e549f1669.hot-update.js": "/0.e2191394795e549f1669.hot-update.js",
-    "/0.a05424a710e75ebbdec2.hot-update.js": "/0.a05424a710e75ebbdec2.hot-update.js",
-    "/0.803ccf8cd888df51f9bc.hot-update.js": "/0.803ccf8cd888df51f9bc.hot-update.js",
-    "/0.fe306cba37338ea99353.hot-update.js": "/0.fe306cba37338ea99353.hot-update.js",
-    "/0.794b010b821a3c5a540e.hot-update.js": "/0.794b010b821a3c5a540e.hot-update.js",
-    "/0.4c01d9497375d7e41666.hot-update.js": "/0.4c01d9497375d7e41666.hot-update.js",
-    "/0.bdb2de375ac2a9cca339.hot-update.js": "/0.bdb2de375ac2a9cca339.hot-update.js",
-    "/0.051440f6c58b29529546.hot-update.js": "/0.051440f6c58b29529546.hot-update.js",
-    "/0.af43e87d5741256fedb8.hot-update.js": "/0.af43e87d5741256fedb8.hot-update.js",
-    "/0.c7e0f65accf9f196db40.hot-update.js": "/0.c7e0f65accf9f196db40.hot-update.js",
-    "/0.c532176b782c0c55df93.hot-update.js": "/0.c532176b782c0c55df93.hot-update.js",
-    "/0.333fbffc59f06760c7be.hot-update.js": "/0.333fbffc59f06760c7be.hot-update.js",
-    "/0.6a4421ae7033f7eb01f3.hot-update.js": "/0.6a4421ae7033f7eb01f3.hot-update.js",
-    "/0.2bcc3eb259cd703e7f3a.hot-update.js": "/0.2bcc3eb259cd703e7f3a.hot-update.js",
-    "/0.294488c3ac863e479975.hot-update.js": "/0.294488c3ac863e479975.hot-update.js",
-    "/0.13b85104c1c305eca2c2.hot-update.js": "/0.13b85104c1c305eca2c2.hot-update.js",
-    "/0.1423cb058ba330653285.hot-update.js": "/0.1423cb058ba330653285.hot-update.js",
-    "/0.7d2a36da7878d50be6d9.hot-update.js": "/0.7d2a36da7878d50be6d9.hot-update.js",
-    "/0.56b89b2f8a9bd4655929.hot-update.js": "/0.56b89b2f8a9bd4655929.hot-update.js",
-    "/0.28a4008f938d6eac972d.hot-update.js": "/0.28a4008f938d6eac972d.hot-update.js",
-    "/0.b4936d6942096bbcf8c7.hot-update.js": "/0.b4936d6942096bbcf8c7.hot-update.js",
-    "/0.c33c8d3a4d80601d76bd.hot-update.js": "/0.c33c8d3a4d80601d76bd.hot-update.js",
-    "/0.3379f5e2db795ec89959.hot-update.js": "/0.3379f5e2db795ec89959.hot-update.js",
-    "/0.fc4772dbfe7dd5bc771f.hot-update.js": "/0.fc4772dbfe7dd5bc771f.hot-update.js",
-    "/0.7bc0de2a22e6a9fc5821.hot-update.js": "/0.7bc0de2a22e6a9fc5821.hot-update.js",
-    "/0.a931255a4e2a28e4338e.hot-update.js": "/0.a931255a4e2a28e4338e.hot-update.js",
-    "/0.eacea333345ef33f5154.hot-update.js": "/0.eacea333345ef33f5154.hot-update.js",
-    "/0.e0fc25a3a86ed41c99d1.hot-update.js": "/0.e0fc25a3a86ed41c99d1.hot-update.js",
-    "/0.0cdc46f8fd7dc446702c.hot-update.js": "/0.0cdc46f8fd7dc446702c.hot-update.js",
-    "/0.8a4c354c565f0c1c8e45.hot-update.js": "/0.8a4c354c565f0c1c8e45.hot-update.js",
-    "/0.65994aa3fe0a45e3f0da.hot-update.js": "/0.65994aa3fe0a45e3f0da.hot-update.js",
-    "/0.5ef7f080b1c9f9685b8f.hot-update.js": "/0.5ef7f080b1c9f9685b8f.hot-update.js",
-    "/0.ea48818ca0129a3a23be.hot-update.js": "/0.ea48818ca0129a3a23be.hot-update.js",
-    "/0.79ceb88890aa140cfc3f.hot-update.js": "/0.79ceb88890aa140cfc3f.hot-update.js",
-    "/0.a23529f4a2788f1ced4a.hot-update.js": "/0.a23529f4a2788f1ced4a.hot-update.js",
-    "/0.b3ec38571ffc80813df3.hot-update.js": "/0.b3ec38571ffc80813df3.hot-update.js",
-    "/0.7d3b320e6d88d4a79fed.hot-update.js": "/0.7d3b320e6d88d4a79fed.hot-update.js",
-    "/0.be07c6dc18a0ab48a1ac.hot-update.js": "/0.be07c6dc18a0ab48a1ac.hot-update.js",
-    "/0.c0e0586ae4183c45feab.hot-update.js": "/0.c0e0586ae4183c45feab.hot-update.js",
-    "/0.ddc3d8306b771e714355.hot-update.js": "/0.ddc3d8306b771e714355.hot-update.js",
-    "/0.2cc430aedb71b87e89b7.hot-update.js": "/0.2cc430aedb71b87e89b7.hot-update.js",
-    "/0.6fb5c15d101f61a0bebb.hot-update.js": "/0.6fb5c15d101f61a0bebb.hot-update.js",
-    "/0.6ed036da388cea65752e.hot-update.js": "/0.6ed036da388cea65752e.hot-update.js",
-    "/0.7a3276dc8cfc0fd38a17.hot-update.js": "/0.7a3276dc8cfc0fd38a17.hot-update.js",
-    "/0.47c313947ddcb6e1bff5.hot-update.js": "/0.47c313947ddcb6e1bff5.hot-update.js",
-    "/0.b3978b34e49123bc72e3.hot-update.js": "/0.b3978b34e49123bc72e3.hot-update.js",
-    "/0.ac6776f41da9e9ea702f.hot-update.js": "/0.ac6776f41da9e9ea702f.hot-update.js",
-    "/0.e49bc72e64949860d33a.hot-update.js": "/0.e49bc72e64949860d33a.hot-update.js",
-    "/0.54b9362591dcb6a2d6ab.hot-update.js": "/0.54b9362591dcb6a2d6ab.hot-update.js",
-    "/0.61736a765fa578c8fc48.hot-update.js": "/0.61736a765fa578c8fc48.hot-update.js",
-    "/0.9272c2c58028e26e1732.hot-update.js": "/0.9272c2c58028e26e1732.hot-update.js",
-    "/0.99449f605de408a3fec1.hot-update.js": "/0.99449f605de408a3fec1.hot-update.js",
-    "/0.8cf49a85cf20e6b471ab.hot-update.js": "/0.8cf49a85cf20e6b471ab.hot-update.js",
-    "/0.0348c99fb8dafbf69414.hot-update.js": "/0.0348c99fb8dafbf69414.hot-update.js",
-    "/0.2bc923d88bba5ba2d6b1.hot-update.js": "/0.2bc923d88bba5ba2d6b1.hot-update.js",
-    "/0.ee7a7e2c6fada707cd27.hot-update.js": "/0.ee7a7e2c6fada707cd27.hot-update.js",
-    "/0.e1cd5c7c731efa6139d7.hot-update.js": "/0.e1cd5c7c731efa6139d7.hot-update.js",
-    "/0.1decb9526639776b1183.hot-update.js": "/0.1decb9526639776b1183.hot-update.js",
-    "/0.bffe70f39515e1b6d8dc.hot-update.js": "/0.bffe70f39515e1b6d8dc.hot-update.js",
-    "/0.823952d682e310f64e7c.hot-update.js": "/0.823952d682e310f64e7c.hot-update.js",
-    "/0.da62e35c8198d72ad2c4.hot-update.js": "/0.da62e35c8198d72ad2c4.hot-update.js",
-    "/0.7e0c1862bc21f43e5980.hot-update.js": "/0.7e0c1862bc21f43e5980.hot-update.js",
-    "/0.e69be3b87d1b4a4dc519.hot-update.js": "/0.e69be3b87d1b4a4dc519.hot-update.js",
-    "/0.e554cc7577bdc03db4c3.hot-update.js": "/0.e554cc7577bdc03db4c3.hot-update.js",
-    "/0.91fd42c9e8f5f8454d3a.hot-update.js": "/0.91fd42c9e8f5f8454d3a.hot-update.js",
-    "/0.5cc1c83e2f6a85a3a3b0.hot-update.js": "/0.5cc1c83e2f6a85a3a3b0.hot-update.js",
-    "/0.57c6b631cb1f6aa18420.hot-update.js": "/0.57c6b631cb1f6aa18420.hot-update.js",
-    "/0.83223d31293a1daacf15.hot-update.js": "/0.83223d31293a1daacf15.hot-update.js",
-    "/0.01799d9f461c74cd7b65.hot-update.js": "/0.01799d9f461c74cd7b65.hot-update.js",
-    "/0.57cca0ea47162a905afd.hot-update.js": "/0.57cca0ea47162a905afd.hot-update.js",
-    "/0.5c40e2173f24fa951b8f.hot-update.js": "/0.5c40e2173f24fa951b8f.hot-update.js",
-    "/0.c263f28fd0ec492769fe.hot-update.js": "/0.c263f28fd0ec492769fe.hot-update.js",
-    "/0.cf49f8f372248bfbe5e1.hot-update.js": "/0.cf49f8f372248bfbe5e1.hot-update.js",
-    "/0.5480b014fd0d7255d215.hot-update.js": "/0.5480b014fd0d7255d215.hot-update.js",
-    "/0.11fe4c6bc858de926d94.hot-update.js": "/0.11fe4c6bc858de926d94.hot-update.js",
-    "/0.aa28bfef74e6d28ed7a0.hot-update.js": "/0.aa28bfef74e6d28ed7a0.hot-update.js",
-    "/0.0143c59571320c7dc8ca.hot-update.js": "/0.0143c59571320c7dc8ca.hot-update.js",
-    "/0.6c73b2da66e446c8d8cd.hot-update.js": "/0.6c73b2da66e446c8d8cd.hot-update.js",
-    "/0.b20bf3517a0e95ce14aa.hot-update.js": "/0.b20bf3517a0e95ce14aa.hot-update.js",
-    "/0.53bf4764f1022f1a7f43.hot-update.js": "/0.53bf4764f1022f1a7f43.hot-update.js",
-    "/0.8895f61f9983c41b33e4.hot-update.js": "/0.8895f61f9983c41b33e4.hot-update.js",
-    "/0.56136a4741c62ace4412.hot-update.js": "/0.56136a4741c62ace4412.hot-update.js"
+    "/js/collapse.js": "/js/collapse.js"
 }
